posiGen_FullsendBox/src/objects/CAZ_Test__c.object
<CustomObject>
    <fields>
        <fullName>AmbientPassFail__c</fullName>
        <label>Ambient Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ambient_Minute_Five__c</fullName>
        <label>Ambient, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ambient_Minute_Four__c</fullName>
        <label>Ambient, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ambient_Minute_One__c</fullName>
        <label>Ambient, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ambient_Minute_Three__c</fullName>
        <label>Ambient, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ambient_Minute_Two__c</fullName>
        <label>Ambient, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_Manometer__c</fullName>
        <label>Baseline Manometer</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BurnersPassFail__c</fullName>
        <label>Burners Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Burners_Minute_Five__c</fullName>
        <label>Burners, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Burners_Minute_Four__c</fullName>
        <label>Burners, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Burners_Minute_One__c</fullName>
        <label>Burners, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Burners_Minute_Three__c</fullName>
        <label>Burners, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Burners_Minute_Two__c</fullName>
        <label>Burners, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAZ_Test_Pass_Fail__c</fullName>
        <formula>If(OR( TEXT( AmbientPassFail__c ) = &quot;Fail&quot;, 
TEXT( BurnersPassFail__c ) = &quot;Fail&quot;, 
TEXT( Fireplace_Other_Flue_Pass_Fail__c ) = &quot;Fail&quot;, 
TEXT( Fireplace_OtherSpillPassFail__c ) = &quot;Fail&quot;, 
TEXT( Furnace_Space_Htr_1_Flue_Pass_Fail__c ) = &quot;Fail&quot;, 
TEXT( Furnace_Space_Htr_1SpillPassFail__c ) = &quot;Fail&quot;, 
TEXT( Furnace_Space_Htr_2_Flue_Pass_Fail__c ) = &quot;Fail&quot;,
TEXT( Furnace_Space_Htr_2SpillPassFail__c ) = &quot;Fail&quot;,
TEXT( OvenPassFail__c ) = &quot;Fail&quot;,
TEXT( WH1_Flue_Pass_Fail__c ) = &quot;Fail&quot;,
TEXT( WH1SpillagePassFail__c ) = &quot;Fail&quot;,
TEXT( WH2_Flue_Pass_Fail__c ) = &quot;Fail&quot;,
TEXT( WH2SpillagePass_Fail__c ) = &quot;Fail&quot;),&quot;Fail&quot;,

If(AND(Test_Complete__c = TRUE,NOT(OR( TEXT( AmbientPassFail__c ) = &quot;Fail&quot;, 
TEXT( BurnersPassFail__c ) = &quot;Fail&quot;, 
TEXT( Fireplace_Other_Flue_Pass_Fail__c ) = &quot;Fail&quot;, 
TEXT( Fireplace_OtherSpillPassFail__c ) = &quot;Fail&quot;, 
TEXT( Furnace_Space_Htr_1_Flue_Pass_Fail__c ) = &quot;Fail&quot;, 
TEXT( Furnace_Space_Htr_1SpillPassFail__c ) = &quot;Fail&quot;, 
TEXT( Furnace_Space_Htr_2_Flue_Pass_Fail__c ) = &quot;Fail&quot;,
TEXT( Furnace_Space_Htr_2SpillPassFail__c ) = &quot;Fail&quot;,
TEXT( OvenPassFail__c ) = &quot;Fail&quot;,
TEXT( WH1_Flue_Pass_Fail__c ) = &quot;Fail&quot;,
TEXT( WH1SpillagePassFail__c ) = &quot;Fail&quot;,
TEXT( WH2_Flue_Pass_Fail__c ) = &quot;Fail&quot;,
TEXT( WH2SpillagePass_Fail__c ) = &quot;Fail&quot;))),&quot;Pass&quot;,&quot;Pending&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAZ Test Pass/Fail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Audit__c</fullName>
        <label>Energy Audit</label>
        <referenceTo>Energy_Audit__c</referenceTo>
        <relationshipLabel>CAZ Tests</relationshipLabel>
        <relationshipName>CAZ_Tests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fireplace_OtherSpillPassFail__c</fullName>
        <label>Fireplace/Other Spill, Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Flue_Minute_Five__c</fullName>
        <label>Fireplace/Other Flue, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Flue_Minute_Four__c</fullName>
        <label>Fireplace/Other Flue, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Flue_Minute_One__c</fullName>
        <label>Fireplace/Other Flue, Minute One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Flue_Minute_Three__c</fullName>
        <label>Fireplace/Other Flue, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Flue_Minute_Two__c</fullName>
        <label>Fireplace/Other Flue, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Flue_Pass_Fail__c</fullName>
        <label>Fireplace/Other Flue, Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Spill_Minute_Five__c</fullName>
        <label>Fireplace/Other Spill, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Spill_Minute_Four__c</fullName>
        <label>Fireplace/Other Spill, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Spill_Minute_One__c</fullName>
        <label>Fireplace/Other Spill, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Spill_Minute_Three__c</fullName>
        <label>Fireplace/Other Spill, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fireplace_Other_Spill_Minute_Two__c</fullName>
        <label>Fireplace/Other Spill, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1SpillPassFail__c</fullName>
        <label>Furnace/Space Htr 1 Spillage, Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Flue_Minute_Five__c</fullName>
        <label>Furnace/Space Htr 1 Flue, Minute Five</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Flue_Minute_Four__c</fullName>
        <label>Furnace/Space Htr 1 Flue, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Flue_Minute_One__c</fullName>
        <label>Furnace/Space Htr 1 Flue, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Flue_Minute_Three__c</fullName>
        <label>Furnace/Space Htr 1 Flue, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Flue_Minute_Two__c</fullName>
        <label>Furnace/Space Htr 1 Flue, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Flue_Pass_Fail__c</fullName>
        <label>Furnace/Space Htr 1 Flue, Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Spill_Minute_Five__c</fullName>
        <label>Furnace/Space Htr 1 Spill, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Spill_Minute_Four__c</fullName>
        <label>Furnace/Space Htr 1 Spill, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Spill_Minute_Three__c</fullName>
        <label>Furnace/Space Htr 1 Spill, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Spillage_Minute_One__c</fullName>
        <label>Furnace/Space Htr 1 Spillage, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_1_Spillage_Minute_Two__c</fullName>
        <label>Furnace/Space Htr 1 Spillage, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2SpillPassFail__c</fullName>
        <label>Furnace/Space Htr 2 Spillage,  Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Flue_Minute_Five__c</fullName>
        <label>Furnace/Space Htr 2 Flue, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Flue_Minute_Four__c</fullName>
        <label>Furnace/Space Htr 2 Flue, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Flue_Minute_One__c</fullName>
        <label>Furnace/Space Htr 2 Flue, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Flue_Minute_Three__c</fullName>
        <label>Furnace/Space Htr 2 Flue, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Flue_Minute_Two__c</fullName>
        <label>Furnace/Space Htr 2 Flue, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Flue_Pass_Fail__c</fullName>
        <label>Furnace/Space Htr 2 Flue, Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Spill_Minute_Five__c</fullName>
        <label>Furnace/Space Htr 2 Spill, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Spill_Minute_Four__c</fullName>
        <label>Furnace/Space Htr 2 Spill, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Spill_Minute_One__c</fullName>
        <label>Furnace/Space Htr 2 Spill, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Spill_Minute_Three__c</fullName>
        <label>Furnace/Space Htr 2 Spill, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furnace_Space_Htr_2_Spill_Minute_Two__c</fullName>
        <label>Furnace/Space Htr 2 Spill, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OvenPassFail__c</fullName>
        <label>Oven Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oven_Minute_Five__c</fullName>
        <label>Oven, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oven_Minute_Four__c</fullName>
        <label>Oven, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oven_Minute_One__c</fullName>
        <label>Oven, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oven_Minute_Three__c</fullName>
        <label>Oven, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oven_Minute_Two__c</fullName>
        <label>Oven, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box only after the test is completed.</inlineHelpText>
        <label>Test Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WH1SpillagePassFail__c</fullName>
        <label>WH 1 Spillage Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WH1_Flue_Minute_Five__c</fullName>
        <label>WH1 Flue, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH1_Flue_Minute_Four__c</fullName>
        <label>WH1 Flue, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH1_Flue_Minute_One__c</fullName>
        <label>WH1 Flue, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH1_Flue_Minute_Three__c</fullName>
        <label>WH1 Flue, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH1_Flue_Minute_Two__c</fullName>
        <label>WH1 Flue, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH1_Flue_Pass_Fail__c</fullName>
        <label>WH1 Flue, Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WH1_Spillage_Minute_One__c</fullName>
        <label>WH1 Spillage, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH1_Spillage_Minute_Two__c</fullName>
        <label>WH1 Spillage, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH2SpillagePass_Fail__c</fullName>
        <label>WH2 Spillage Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WH2_Flue_Minute_Five__c</fullName>
        <label>WH2 Flue, Minute Five</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH2_Flue_Minute_Four__c</fullName>
        <label>WH2 Flue, Minute Four</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH2_Flue_Minute_One__c</fullName>
        <label>WH2 Flue, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH2_Flue_Minute_Three__c</fullName>
        <label>WH2 Flue, Minute Three</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH2_Flue_Minute_Two__c</fullName>
        <label>WH2 Flue, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH2_Flue_Pass_Fail__c</fullName>
        <label>WH2 Flue, Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WH2_Spillage_Minute_One__c</fullName>
        <label>WH2 Spillage, Minute One</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WH2_Spillage_Minute_Two__c</fullName>
        <label>WH2 Spillage, Minute Two</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_1_In_Air_Handler__c</fullName>
        <label>Zone 1 In: Air Handler</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_1_In_CAZ_Door__c</fullName>
        <label>Zone 1 In: CAZ Door</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_1_In_Dryer_Exhaust_Hood__c</fullName>
        <label>Zone 1 In: Dryer, Exhaust, Hood</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_1_In_Worse_Case_Pressure__c</fullName>
        <label>Zone 1 In: Worse Case Pressure</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_1_Out_Air_Handler__c</fullName>
        <label>Zone 1 Out: Air Handler</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_1_Out_CAZ_Door__c</fullName>
        <label>Zone 1 Out: CAZ Door</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_1_Out_Dryer_Exhaust_Hood__c</fullName>
        <label>Zone 1 Out: Dryer, Exhaust, Hood</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_1_Out_Worse_Case_Pressure__c</fullName>
        <label>Zone 1 Out: Worse Case Pressure</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_2_In_Air_Handler__c</fullName>
        <label>Zone 2 In: Air Handler</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_2_In_CAZ_Door__c</fullName>
        <label>Zone 2 In: CAZ Door</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_2_In_Dryer_Exhaust_Hood__c</fullName>
        <label>Zone 2 In: Dryer, Exhaust, Hood</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_2_In_Worse_Case_Pressure__c</fullName>
        <label>Zone 2 In: Worse Case Pressure</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_2_Out_Air_Handler__c</fullName>
        <label>Zone 2 Out: Air Handler</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_2_Out_CAZ_Door__c</fullName>
        <label>Zone 2 Out: CAZ Door</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_2_Out_Dryer_Exhaust_Hood__c</fullName>
        <label>Zone 2 Out: Dryer, Exhaust, Hood</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_2_Out_Worse_Case_Pressure__c</fullName>
        <label>Zone 2 Out: Worse Case Pressure</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_3_In_Air_Handler__c</fullName>
        <label>Zone 3 In: Air Handler</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_3_In_CAZ_Door__c</fullName>
        <label>Zone 3 In: CAZ Door</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_3_In_Dryer_Exhaust_Hood__c</fullName>
        <label>Zone 3 In: Dryer, Exhaust, Hood</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_3_In_Worse_Case_Pressure__c</fullName>
        <label>Zone 3 In: Worse Case Pressure</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_3_Out_Air_Handler__c</fullName>
        <label>Zone 3 Out: Air Handler</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_3_Out_CAZ_Door__c</fullName>
        <label>Zone 3 Out: CAZ Door</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_3_Out_Dryer_Exhaust_Hood__c</fullName>
        <label>Zone 3 Out: Dryer, Exhaust, Hood</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_3_Out_Worse_Case_Pressure__c</fullName>
        <label>Zone 3 Out: Worse Case Pressure</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>CAZ Test</label>
    <nameField>
        <displayFormat>CAZ{00000}</displayFormat>
        <label>CAZ Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAZ Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>